--- a/libc/utils/gpu/loader/CMakeLists.txt
+++ b/libc/utils/gpu/loader/CMakeLists.txt
@@ -6,9 +6,11 @@ target_include_directories(gpu_loader PUBLIC
   ${LIBC_SOURCE_DIR}
 )
 
-find_package(hsa-runtime64 QUIET 1.2.0 HINTS ${CMAKE_INSTALL_PREFIX} PATHS /opt/rocm)
+find_package(hsa-runtime64 QUIET 1.2.0 HINTS ${CMAKE_INSTALL_PREFIX} PATHS /opt/rocm /usr/lib/x86_64-linux-gnu/cmake/hsa-runtime64)
 if(hsa-runtime64_FOUND)
   add_subdirectory(amdgpu)
+else()
+  message(WARNING "HSA runtime not found")
 endif()
 
 # The CUDA loader requires LLVM to traverse the ELF image for symbols.
